dodatki, inne gui, zamkniete beta